FIX: Changed body overflow

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -127,5 +127,5 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  overflow: hidden;
+  /* overflow: hidden; */
 }
